# serializer version: 1
# name: TestLCPCall.test_call_as_distance[event]
  29.0
# ---
# name: TestLCPCall.test_call_as_distance[interval]
  9.0
# ---
# name: TestLCPCall.test_call_as_distance[state]
  5.0
# ---
# name: TestLCPCall.test_call_default[event]
  0.0
# ---
# name: TestLCPCall.test_call_default[interval]
  0.0
# ---
# name: TestLCPCall.test_call_default[state]
  0.0
# ---
